--- a/client/src/app/employee-details/employee-details.component.html
+++ b/client/src/app/employee-details/employee-details.component.html
@@ -9,4 +9,5 @@
     <div>
         <label > <b>Email : </b></label>{{employee.emailId}}
     </div>
+    <button (click)="goback()" class="btn btn-outline-primary">Back</button>
 </div>
